add welcome section

--- a/src/App.module.scss
+++ b/src/App.module.scss
@@ -1,6 +1,5 @@
-.tolu {
-  background-color: #7400AB;
-  font-size: 3rem;
-  color: white;
-  padding: 2rem;
+.container {
+  display: grid;
+  grid-template-columns: 100%;
+  width: 100%;
 }
