add about section

--- a/src/Components/Layout/Footer.module.scss
+++ b/src/Components/Layout/Footer.module.scss
@@ -1,2 +1,6 @@
-@import '../../sass/mixins.scss';
-@import '../../sass/variables.scss';
+.footer {
+  width: 100%;
+  padding: 1.3rem 2rem;
+  font-size: 1.5rem;
+  text-align: center;
+}
