--- a/src/Components/Layout/Header.module.scss
+++ b/src/Components/Layout/Header.module.scss
@@ -3,13 +3,14 @@
 
 .header {
   width: 100%;
-  padding: 1.3rem 2rem;
+  height: 5rem;
+  padding: 1rem 2rem;
   box-shadow: 0 2px 12px rgba(0, 0, 0, .1);
   font-size: 2.5rem;
   font-weight: 700;
 
   @include respond($mid) {
-    padding: 1.3rem 4rem;
+    padding: 1rem 4rem;
   }
 }
 
