--- a/src/Components/Sections/Welcome.module.scss
+++ b/src/Components/Sections/Welcome.module.scss
@@ -8,7 +8,7 @@
   align-items: center;
   width: 100%;
   font-size: 2rem;
-  min-height: 100vh;
+  min-height: calc(100vh - 5rem);
   padding: 4rem 2rem;
   text-align: center;
 
