--- a/src/Components/Sections/Welcome.module.scss
+++ b/src/Components/Sections/Welcome.module.scss
@@ -7,19 +7,19 @@
   justify-content: space-around;
   align-items: center;
   width: 100%;
-  font-size: 2rem;
-  min-height: calc(100vh - 5rem);
-  padding: 4rem 2rem;
+  font-size: 1.8rem;
+  padding: 2.5rem 2rem 8rem;
   text-align: center;
 
   @include respond($mid) {
     flex-flow: row wrap;
+    min-height: calc(100vh - 5rem);
     padding: 2rem 2rem;
     text-align: left;
   }
 
   & h1 {
-    padding-top: 3rem;
+    padding-top: 2rem;
     font-weight: 300;
 
     @include respond($mid) {
@@ -40,7 +40,12 @@
 }
 
 .imageContainer {
+  width: 25rem;
+  height: 25rem;
+
   @include respond($mid) {
+    width: 30rem;
+    height: 30rem;
     order: 2;
   }
 }
