fixed typo and bottom margin in the about component

--- a/src/Components/Sections/About.module.scss
+++ b/src/Components/Sections/About.module.scss
@@ -5,6 +5,7 @@
   min-height: 100vh;
   background-color: $color-main;
   color: $color-white;
+  padding-bottom: 4rem;
 
   & h1 {    
     padding: 2rem;
