--- a/src/Components/Layout/Footer.module.scss
+++ b/src/Components/Layout/Footer.module.scss
@@ -1,6 +1,10 @@
+@import '../../sass/variables.scss';
+
 .footer {
   width: 100%;
-  padding: 1.3rem 2rem;
+  padding: 3rem 2rem;
   font-size: 1.5rem;
   text-align: center;
+  background-color: $color-black;
+  color: $color-light;
 }
