--- a/src/Components/Sections/Contact.module.scss
+++ b/src/Components/Sections/Contact.module.scss
@@ -2,15 +2,15 @@
 @import '../../sass/variables.scss';
 
 .container {
-  min-height: 100vh;
-  background-color: $color-main;
+  min-height: calc(100vh - 9rem);
+  background-color: $color-black;
   color: $color-white;
   padding-bottom: 4rem;
 
   & h1 {    
     padding: 2rem;
     font-weight: 300;
-    background-color: $color-black;
+    background-color: $color-main;
     border-bottom: .5rem solid $color-white;
 
     @include respond($mid) {
@@ -19,14 +19,16 @@
   }
 
   p {
-    padding: 1.5rem;
+    padding: 2rem 1.5rem;
     line-height: 1.5;
     color: $color-light;
   }
 }
 
 .content {
-  padding: 1rem;
+  padding: 2rem;
+  padding-top: 4rem;
+  text-align: center;
 
   @include respond($mid) {
     padding: 5rem 3rem 3rem;
