--- a/src/Components/Sections/Projects.module.scss
+++ b/src/Components/Sections/Projects.module.scss
@@ -2,8 +2,9 @@
 @import '../../sass/variables.scss';
 
 
-.projects {
-
+.container {
+  width: 100%;
+  
   h1 {    
     padding: 2rem;
     font-weight: 300;
@@ -18,6 +19,5 @@
 }
 
 .content {
-  min-height: calc(100vh - 6rem);
   padding: 2rem;
 }
