--- a/src/Components/Sections/Contact.module.scss
+++ b/src/Components/Sections/Contact.module.scss
@@ -2,10 +2,10 @@
 @import '../../sass/variables.scss';
 
 .container {
-  min-height: calc(100vh - 9rem);
+  min-height: calc(100vh - 15rem);
   background-color: $color-black;
   color: $color-white;
-  padding-bottom: 4rem;
+  padding-bottom: 2rem;
 
   & h1 {    
     padding: 2rem;
@@ -19,7 +19,7 @@
   }
 
   p {
-    padding: 2rem 1.5rem;
+    padding: 1.5rem;
     line-height: 1.5;
     color: $color-light;
   }
@@ -32,5 +32,31 @@
 
   @include respond($mid) {
     padding: 5rem 3rem 3rem;
+  }
+
+  & a {
+    text-decoration: none;
+    color: $color-white;
+    display: inline-block;
+    padding-top: 1rem;
+    transition: all .3s ease;
+
+    &:hover {
+      transform: translateY(-5px);
+    }
+  }
+}
+
+.icons {
+
+  & img {
+    padding: 2rem;
+    width: 8rem;
+    height: 8rem;
+    transition: all .3s ease;
+
+    &:hover {
+      transform: translateY(-3px);
+    }
   }
 }
