--- a/src/Components/Sections/Welcome.module.scss
+++ b/src/Components/Sections/Welcome.module.scss
@@ -10,7 +10,7 @@
   font-size: 1.8rem;
   padding: 4rem 2rem 8rem;
   text-align: center;
-  animation: bounce 1.5s ease;
+  animation: grow 1.5s ease;
 
   @include respond($mid) {
     flex-flow: row wrap;
@@ -64,12 +64,9 @@
   }
 }
 
-@keyframes bounce {
+@keyframes grow {
   0% {
-    transform: scale(.8);
-  }
-  50% {
-    transform: scale(1.1);
+    transform: scale(.5);
   }
   100% {
     transform: scale(1);
