--- a/src/Components/Sections/Contact.module.scss
+++ b/src/Components/Sections/Contact.module.scss
@@ -7,21 +7,26 @@
   color: $color-white;
   padding-bottom: 2rem;
 
-  & h1 {    
-    padding: 2rem;
-    font-weight: 300;
-    background-color: $color-main;
-    border-bottom: .5rem solid $color-white;
-
-    @include respond($mid) {
-      padding: 2rem 4.5rem;
-    }
-  }
-
   p {
     padding: 1.5rem;
     line-height: 1.5;
     color: $color-light;
+  }
+
+  .heading {
+    background-color: $color-main;
+    border-bottom: .5rem solid $color-white;
+    
+    & h1 {    
+      padding: 2rem 2.5rem;
+      font-weight: 300;
+      max-width: $max-container-width;
+      margin: 0 auto;      
+  
+      @include respond($mid) {
+        padding: 2rem 4.5rem;
+      }
+    }
   }
 }
 
