--- a/src/Components/Sections/Welcome.module.scss
+++ b/src/Components/Sections/Welcome.module.scss
@@ -11,6 +11,8 @@
   padding: 4rem 2rem 8rem;
   text-align: center;
   animation: grow 1.5s ease;
+  max-width: 2000px;
+  margin: 0 auto;
 
   @include respond($mid) {
     flex-flow: row wrap;
