--- a/src/sass/variables.scss
+++ b/src/sass/variables.scss
@@ -4,5 +4,8 @@ $color-light: #f1f1f1;
 $color-grey: #cccccc;
 $color-black: #000000;
 
+// containers
+$max-container-width: 1600px;
+
 // media queries
 $mid: 850px;
