--- a/src/Components/Layout/Header.module.scss
+++ b/src/Components/Layout/Header.module.scss
@@ -8,10 +8,15 @@
   box-shadow: 0 2px 12px rgba(0, 0, 0, .1);
   font-size: 2.5rem;
   font-weight: 700;
-
+  
   @include respond($mid) {
     padding: 1rem 4rem;
   }
+}
+
+.headerText {
+  max-width: $max-container-width;
+  margin: 0 auto;
 }
 
 .name {
